--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vite": "^6.0.0"
   },
   "dependencies": {
-    "@lucide/svelte": "^0.479.0"
+    "@lucide/svelte": "^0.479.0",
+    "@vercel/analytics": "^1.5.0"
   }
 }
