--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@lucide/svelte": "^0.479.0",
     "@sveltejs/adapter-auto": "^4.0.0",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@vercel/analytics": "^1.5.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "svelte-markdown": "^0.4.1",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.0.0",
     "vite": "^6.0.0"
-  },
-  "dependencies": {
-    "@lucide/svelte": "^0.479.0",
-    "@vercel/analytics": "^1.5.0",
-    "svelte-markdown": "^0.4.1"
   }
 }
